conection to gemini!

--- a/Smart Recipe Generator/Smart Recipe Generator.csproj
+++ b/Smart Recipe Generator/Smart Recipe Generator.csproj
@@ -1,14 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Smart_Recipe_Generator</RootNamespace>
+    <UserSecretsId>0bc614e3-2a65-45f8-b71d-c43a54c1051c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.70.0" />
   </ItemGroup>
 
 </Project>
