--- a/Smart Recipe Generator/appsettings.json
+++ b/Smart Recipe Generator/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AI": {
+    "Provider": "gemini",
+    "Endpoint": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent",
+    "ApiKey": "AIzaSyAiXChUq3q7ilt-Mj_0EhbnVb1p9j-cXqU",
+    "Model": "gemini-2.5-flash"
+  }
 }
