--- a/Smart Recipe Generator/appsettings.json
+++ b/Smart Recipe Generator/appsettings.json
@@ -9,7 +9,7 @@
   "AI": {
     "Provider": "gemini",
     "Endpoint": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent",
-    "ApiKey": "AIzaSyAiXChUq3q7ilt-Mj_0EhbnVb1p9j-cXqU",
+    "ApiKey": "",
     "Model": "gemini-2.5-flash"
   }
 }
