--- a/Smart Recipe Generator/appsettings.json
+++ b/Smart Recipe Generator/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "AI": {
-    "Provider": "gemini",
-    "Endpoint": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent",
+    "Provider": "",
+    "Endpoint": "",
     "ApiKey": "",
-    "Model": "gemini-2.5-flash"
+    "Model": ""
   }
 }
